# otaniemipeli-backend-rs

./: .dockerignore  .gitignore  .sample.env  Cargo.toml  Dockerfile  compose.yaml
database-migrations/: V1__setup.sql  V2__seed_with_test_data.sql
migrations/: V1__setup.sql  V2__seed_with_test_data.sql  V2__set_constraints.sql  V3__seed_with_test_data.sql  V3__set_constraint.sql  V4__alter_teams_table.sql  V5__add_game_started.sql  V6__track_expired_sessions.sql  V7__add_finished_to_turn.sql  __V4__seed_with_user_login.sql.sample
scripts/: generateTStypes.py
src/: db_connection.rs  main.rs  server.rs  types.rs
src/api/: drinks.rs  drinks2.rs  games.rs  games2.rs  mod.rs
src/api/drinks/: mod.rs  utils.rs
src/api/referee/: mod.rs
src/api/secretary/: mod.rs
src/api/v1/: mod.rs
src/api/v1/boards/: mod.rs  utils.rs
src/api/v1/boards/places/: mod.rs  utils.rs
src/api/v1/boards/places/drinks/: mod.rs  utils.rs
src/api/v1/drinks/: mod.rs  utils.rs
src/api/v1/drinks/ingredients/: mod.rs  utils.rs
src/api/v1/games/: mod.rs  utils.rs
src/api/v1/ingredients/: mod.rs  utils.rs
src/database/: boards.rs  drinks.rs  games.rs  login.rs  mod.rs  team.rs  utils.rs
src/login/: mod.rs  utils.rs
src/utils/: mod.rs  runtime.rs  socket.rs  state.rs  types.rs
