[package]
name = "Otaniemipeli"
version = "0.1.0"
edition = "2021"

[dependencies]
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tokio = { version = "1.45.1", features = ["full", "rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.98"
socketioxide = { version = "0.17.2", features = ["state"] }
axum = "0.8.4"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3"
sha2 = "0.10.9"
chrono = { version = "0.4.41", features = ["serde"] }
http = "1.3.1"
tower-http = { version = "0.6.6", features = ["cors"] }
rand = "0.9.1"
